2002-02-20  Michael Meeks  <michael@ximian.com>

	* Makefile.am: add test-performance.c

	* test-performance.c: impl.

2002-02-17  Michael Meeks  <michael@ximian.com>

	* rsvg.c (rsvg_handle_write): make sure we set
	replaceEntities before we parse any of the buffer.
	(rsvg_pixbuf_from_file_at_size),
	(rsvg_pixbuf_from_file_at_zoom): read / parse
	SVG_BUFFER_SIZE bytes at a time, not 3.
	(rsvgSAXHandler): kill bogus module global.
	(rsvg_error_cb): impl.

2002-02-18  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in: remove GNOME_COMMON_INIT, GNOME_PLATFORM_GNOME_2

2002-02-16  Alexander Larsson  <alla@lysator.liu.se>

	* test-71297.svg:
	Add test case.

2002-02-12  Darin Adler  <darin@bentspoon.com>

	* rsvg-paint-server.c: (rsvg_render_paint_server): Add a
	return_if_fail.
	
	* rsvg.c: (rsvg_start_svg): Handle .svg files without width and
	height values better. This was actually better in librsvg 1.0,
	and got lost in the rework of the API.
	(rsvg_push_opacity_group): Handle the case where ctx->pixbuf is NULL.
	(rsvg_pop_opacity_group): Handle NULL pixbuf cases.
	(rsvg_render_svp): Handle NULL pixbuf case better.
	(rsvg_render_bpath): Handle NULL pixbuf case.
	(rsvg_text_handler_characters): Handle NULL pixbuf case.
	
	* test-20020212.svg: Add a test file from Sodipodi without a width
	or height.

==== librsvg 1.1.3 ====

2002-02-09  Darin Adler  <darin@bentspoon.com>

	* NEWS: Release notes for 1.1.3.
	* configure.in: Bump version number.

2002-02-08  Anders Carlsson  <andersca@gnu.org>

	* rsvg.c (rsvg_pixmap_destroy): Add from GNOME 1 version.
	(rsvg_start_svg): Use rsvg_pixmap_destroy as finalize function.
	(rsvg_push_opacity_group): Likewise.
	(rsvg_pixbuf_from_file_at_size): Call rsvg_handle_close.
	(rsvg_pixbuf_from_file_at_zoom): Likewise.

==== librsvg 1.1.2 ====

2002-02-04  Darin Adler  <darin@bentspoon.com>

	* NEWS: Release notes for 1.1.2.
	* configure.in: Bump version number, give better error message
	when popt is missing.
